terraform/terragrunt/local/kind-argocd/apps/sentiment/base/policies/cilium/cilium-network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sentiment-frontend
spec:
  endpointSelector:
    matchLabels:
      "k8s:app.kubernetes.io/name": sentiment-frontend
      "k8s:app.kubernetes.io/component": frontend
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": azure-auth-gateway
            "k8s:app.kubernetes.io/name": azure-auth-gateway-nginx
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
      authentication:
        mode: required
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
